# wiki-itn

./: Cargo.toml  Dockerfile  entrypoint.sh  feed.xml  itn-page.html  nginx-site.conf  readme.md  run_wiki_itn.sh
.github/workflows/: docker-ci.yml
src/: main.rs  news_item.rs
tests/: integration_test.rs
