[package]
name = "wiki-itn"
version = "0.1.0"
authors = ["Kevin Hahn <hahn.kev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
html_parser = "0.6.2"
chrono = "0.4.19"

[lib]
path = "src/main.rs"
name = "wiki_itn"